# sunnah-toolkit

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.run.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/sunnah/: SKILL.md
.github/workflows/: build-image.yml
deploy/: keys.example.yaml
deploy/cloudflared/: config.yml.example
docs/: code-review-postmerge.md  session-summary.md
docs/eval/: candidates-draft-20260524.json  curation-batch1-draft.md  queries.json  results-bge-v2-m3-20260523-222128.json  results-jina-v2-base-20260523-222156.json  results-jina-v3-20260524-000108.json  results-none-20260523-213909.json  threshold-curve.json
scripts/: build_embeddings.py  build_models.py  build_sqlite.py  eval_natural.py  eval_search.py  fetch_data.py  refresh.sh  seed_eval_set.py  tune_threshold.py
sunnah_mcp/: __init__.py  __main__.py  data.py  format.py  semantic.py  server.py
sunnah_toolkit/: __init__.py  __main__.py  cli.py
sunnah_toolkit/api/: app.py  auth.py  routes.py  ui.py
sunnah_toolkit/core/: _device.py  data.py  llm_router.py  reranker.py  retrieval.py  semantic.py  text_format.py  tools.py  translit.py
sunnah_toolkit/mcp/: server.py
tests/: test_get_hadith_lookup.py  test_natural_search.py  test_normalize_grade.py  test_retrieval_latency.py  test_retrieval_union.py  test_search_with_rerank.py  test_term_matched_words.py  test_term_multiword.py
