[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunnah-toolkit"
version = "0.1.0"
description = "Hadith lookup tools exposed via REST and MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hassan Najeeb"}]
dependencies = [
    "mcp[cli]>=1.2",
    "httpx>=0.27",
    "rank_bm25>=0.2.2",
    "Unidecode>=1.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["sunnah_toolkit*"]
