[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunnah-toolkit"
version = "0.1.0"
description = "Hadith lookup tools exposed via REST and MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hassan Najeeb"}]
dependencies = [
    "mcp[cli]>=1.2",
    "httpx>=0.27",
    "rank_bm25>=0.2.2",
    "Unidecode>=1.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "PyYAML>=6.0",
    # Issue #4: optional natural-language router uses Anthropic's Claude
    # Haiku for query rewriting. The router fails soft (returns None) when
    # the dependency is missing OR when ANTHROPIC_API_KEY is unset, so this
    # is a runtime-soft dep rather than a hard import requirement.
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# LO-003: INT8/ONNX fallback of cross-encoder rerankers (Issue #2 Phase E).
# Gated behind an optional extra until Phase E actually wires it in — the
# runtime container is ~250 MB lighter without these wheels.
onnx = [
    "optimum>=1.20",
    "onnxruntime>=1.18",
]

[tool.setuptools.packages.find]
include = ["sunnah_toolkit*"]
